--- a/Core/NDSE.vcproj
+++ b/Core/NDSE.vcproj
@@ -51,6 +51,7 @@
 				WarnAsError="false"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
+				DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
