Added ARM7 support and no$ debug protocol

--- a/Core/NDSE.vcproj
+++ b/Core/NDSE.vcproj
@@ -408,6 +408,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\runner.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\runner.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Util.cpp"
 				>
 			</File>
