critical fix in elf loader (using physical addresses and loader segments rather than mapped sections and their virtual addresses)

--- a/Core/NDSE.vcproj
+++ b/Core/NDSE.vcproj
@@ -303,6 +303,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="RAW"
+				>
+				<File
+					RelativePath=".\loader_raw.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\loader_raw.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Recompiler"
