--- a/Core/NDSE.vcproj
+++ b/Core/NDSE.vcproj
@@ -372,6 +372,10 @@
 			Name="Memory"
 			>
 			<File
+				RelativePath=".\loadstore.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Mem.cpp"
 				>
 			</File>
@@ -512,6 +516,14 @@
 				</File>
 				<File
 					RelativePath=".\io_observe.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="FIFO"
+				>
+				<File
+					RelativePath=".\fifo.h"
 					>
 				</File>
 			</Filter>
