reverted new memory system due to conceptional bug: load/stores _on_ the specialized page would have been specialized but not stores _to_ it

--- a/Core/NDSE.vcproj
+++ b/Core/NDSE.vcproj
@@ -372,10 +372,6 @@
 			Name="Memory"
 			>
 			<File
-				RelativePath=".\loadstore.h"
-				>
-			</File>
-			<File
 				RelativePath=".\Mem.cpp"
 				>
 			</File>
@@ -402,6 +398,10 @@
 					RelativePath=".\MemRegionBase.h"
 					>
 				</File>
+			</Filter>
+			<Filter
+				Name="IO Registers"
+				>
 			</Filter>
 		</Filter>
 		<Filter
