Added missing instructions to run armwrestler tests. Fixed loads according to armwrestler. Preparations for CPU modes

--- a/Core/NDSE.vcproj
+++ b/Core/NDSE.vcproj
@@ -411,6 +411,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="VRAM"
+				>
+				<File
+					RelativePath=".\vram.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\vram.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="CPU"
