--- a/Core/NDSE.vcproj
+++ b/Core/NDSE.vcproj
@@ -272,6 +272,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\CPUMode.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Namespaces.h"
 				>
 			</File>
